compiler/tests/fixtures/invalid/semantics/special_role_this_in_conditions.viv
action greet:
    roles:
        @greeter:
            as: initiator
        @target:
            as: recipient
    conditions:
        @this.count > 5
    effects:
        @target.greeted = true
